@@ -21,8 +21,8 @@ ext.versions = [
         stroomQuery       : getPropertyOrDefault('version', 'SNAPSHOT'),
 
         //------Stroom-libs---------------
-        stroomExpression  : 'v2.0.0-beta.1',
-        eventLogging      : 'v4.0.1_schema-v3.2.4',
+        stroomExpression  : 'v1.4.1',
+        eventLogging      : 'v3.2.3_schema-v3.2.4',
 
         //------------3rd-party------------
         dropwizard        : '1.2.2',
@@ -81,7 +81,8 @@ ext.libs = [
         jaxb_api            : "javax.xml.bind:jaxb-api:2.3.0",
         jersey_client       : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
         jersey_server       : "org.glassfish.jersey.core:jersey-server:$versions.jersey",
-        junit               : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+        junit_jupiter_api              : "org.junit.jupiter:junit-jupiter-api:${versions.junit}",
+        junit4              : "junit:junit:4.12",
         jose4j              : "org.bitbucket.b_c:jose4j:$versions.jose4j",
         jooq                : "org.jooq:jooq:$versions.jooq",
         logback_classic     : "ch.qos.logback:logback-classic:$versions.logback",
@@ -102,7 +103,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-//        classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
+        classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
         classpath 'com.benjaminsproule:swagger-gradle-plugin:1.0.2'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
@@ -134,9 +135,9 @@ def pomConfig = {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'idea'
-//    apply plugin: 'ca.cutterslade.analyze'
-    sourceCompatibility = 1.10
-    targetCompatibility = 1.10
+    apply plugin: 'ca.cutterslade.analyze'
+    sourceCompatibility = 1.8
+    targetCompatibility = 1.8
 
 
 
@@ -283,83 +284,6 @@ subprojects {
     }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    afterEvaluate {
-        repositories {
-            jcenter()
-        }
-
-        compileJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '--module-path', classpath.asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        compileTestJava {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                options.compilerArgs = [
-                        '--module-path', classpath.asPath,
-//                        '--add-modules', 'junit',
-//                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        test {
-            inputs.property("moduleName", moduleName)
-            doFirst {
-                jvmArgs = [
-                        '--module-path', classpath.asPath,
-                        '--add-modules', 'ALL-MODULE-PATH',
-//                        '--add-reads', "$moduleName=junit",
-                        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-                ]
-                classpath = files()
-            }
-        }
-
-        javadoc {
-            options.addStringOption('-module-path', classpath.asPath)
-            options.addStringOption('Xdoclint:all,-missing', '-html5')
-        }
-
-        jar {
-            inputs.property("moduleName", moduleName)
-            manifest {
-                attributes(
-                        "Automatic-Module-Name": moduleName,
-                )
-            }
-            version versions.stroomQuery
-        }
-    }
-
-
 }
 
 project(':stroom-query-api') {
@@ -431,44 +355,3 @@ project(':stroom-query-testing') {
         }
     }
 }
-
-//task aggregatedJavadocs(
-//        type: Javadoc,
-//        description: 'Generate javadocs from all child projects as if it was a single project',
-//        group: 'Documentation') {
-//
-//    inputs.property("moduleName", 'aggregatedJavadocs')
-//    doFirst {
-//        options.addStringOption('-module-path', classpath.asPath)
-//    }
-//
-//    destinationDir = file("$buildDir/docs/javadoc")
-//    title = "$project.name $version API"
-//    options.author true
-//    options.links 'http://docs.oracle.com/javase/8/docs/api/'
-//    options.addStringOption 'Xdoclint:none', '-quiet'
-//    options.addStringOption '-module-path', classpath.asPath
-////    options.addStringOption '-add-modules', 'ALL-MODULE-PATH'
-//
-//
-////    doFirst {
-////        jvmArgs = [
-////                '--module-path', classpath.asPath,
-////                '--add-modules', 'ALL-MODULE-PATH',
-//////                        '--add-reads', "$moduleName=junit",
-//////                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-////        ]
-////        classpath = files()
-////    }
-//
-//    subprojects.each { proj ->
-//        proj.tasks.withType(Javadoc).each { javadocTask ->
-//            source += javadocTask.source
-//            classpath += javadocTask.classpath
-//            excludes += javadocTask.excludes
-//            includes += javadocTask.includes
-//        }
-//    }
-//}
-//
-//tasks.build.dependsOn aggregatedJavadocs
